<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.jupimo.c8driver_perf_test</groupId>
	<artifactId>c8driver_perf_test</artifactId>
	<packaging>pom</packaging>
	<version>1.0.0-SNAPSHOT</version>
	<name>c8driver_perf_test</name>
	<!--
	<organization>
		<name>Jupimo Inc</name>
		<url>http://www.jupimo.com</url>
	</organization>
	-->

	<modules>
		<module>modules/c8driver_perf_test_common</module>
		<module>modules/dsx_drv_3_0_2</module>
		<module>modules/dsx_drv_2_1_9</module>
		<module>modules/sprng_data_1_4_2</module>
	</modules>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<verbose>false</verbose>
				</configuration>
			</plugin>
			<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-release-plugin</artifactId>
					<version>2.5.1</version>
					<configuration>
					   <goals>deploy</goals>
					 </configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.17</version>
				<configuration>
					<includes>
						<include>**/*TestCase.class</include>
					</includes>
				</configuration>
				<executions>
					<execution>
						<id>default-test</id>
						<configuration>
							<argLine>-Xms4096m -Xmx7184m -XX:MaxPermSize=256m
								-Djava.awt.headless=true </argLine>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
	</dependencies>
</project>
